# pokedex

./: .gitignore  .htaccess  CreateDB.rb  DB2JSON.rb  DB2JSON_evol_changeform.rb  DB2JSON_for_map.rb  DB2JSON_for_pokedex.rb  LICENSE  README.md  check_pokedex_ids.php  create_pokemon_metadata.py  csv_to_json_converter.rb  csv_to_sql_pokedex_description.rb  csv_to_sql_pokedex_dex_map.rb  description.json  er.md  export_description_json.rb  gen7.json  gen7_no.json  gen7_sm_no.json  gen7_usum_no.json  gen8_ss_no.json  home.csv  import_csv2db_description.rb  import_db.rb  insert_pokedex_dex_map.sql  json_to_csv_converter.rb  main.py  pokedex-api-spec.md  pokedex.db  pokedex.json  pokedex.php  pokedex.py  pokedex.rb  pokemon_metadata.json  tag.json  type.php
ability/: ability.json
config/: pokedex_config.json
convert/: local_global_id_converter.json
dot/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  001.html  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  002.html  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  003.html  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  (+899 more)
editor/: index.html  package-lock.json  package.json  start_editor.bat  tsconfig.json  vite.config.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: lib.rs  main.rs
gen4/: johto.json
gen8/: gen8.json
(+141 files in other folders)
