[package]
name = "pokedex-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "pokedex_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pokedex-editor"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
